# Lunaria

./: .gitignore  CMakeLists.txt  README.md  cronjob.sh  install-desktop.sh  lunaria.cpp  setup.sh
.devops/: dockerfile
build_Lunaria/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build_Lunaria/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_Lunaria/Lunaria_autogen/: deps  mocs_compilation.cpp
build_Lunaria/Lunaria_autogen/include/: lunaria.moc  lunaria.moc.d
ener-g/: CMakeLists.txt  energymonitor.cpp  energymonitor.h  main.cpp
models/: installModel.sh
scripts/: buildQtApp.sh
src/: CMakeLists.txt  TODO.txt  llamaworker.cpp  llamaworker.h  lunaria.cpp  settingsdialog.cpp  settingsdialog.h  slots.h  whisperworker.cpp  whisperworker.h
tools/: LlamaFlags.sh  WhisperFlags.sh  autobuild.sh  buildLlama.sh  buildOCR.sh  buildQtApp.sh  buildWhisper.sh
